<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/cd_bg"
        android:src="@drawable/bg_lumen_waves"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="8dp"
        app:cardBackgroundColor="#F5F5F5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="32dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/join"
                android:textColor="#000000"
                android:textSize="34sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="4dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dont_have_account"
                    android:textColor="#888888"
                    android:textSize="14sp" />
                <TextView
                    android:id="@+id/btnCriarConta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_account"
                    android:textColor="#3A86FF"
                    android:textStyle="bold"
                    android:textSize="14sp" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/identifier_label"
                android:layout_marginTop="28dp"
                android:textColor="#666666" />

            <EditText
                android:id="@+id/editIdentificador"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:background="@drawable/bg_input_field"
                android:hint="@string/email_placeholder"
                android:paddingHorizontal="16dp"
                android:inputType="textEmailAddress"
                android:autofillHints="username"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password_label"
                android:layout_marginTop="18dp"
                android:textColor="#666666" />

            <EditText
                android:id="@+id/editSenha"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:background="@drawable/bg_input_field"
                android:hint="@string/password_hint"
                android:paddingHorizontal="16dp"
                android:inputType="textPassword"
                android:autofillHints="emailAddress"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginTop="20dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forget_password"
                    android:textColor="#888888"
                    android:textSize="14sp" />
                <TextView
                    android:id="@+id/btnRecuperarSenha"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recover_password"
                    android:textColor="#3A86FF"
                    android:textStyle="bold"
                    android:textSize="14sp" />
            </LinearLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_marginTop="28dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnEntrar"

                    app:layout_constraintBottom_toBottomOf="parent"

                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="28dp"
                    android:text="@string/join"
                    app:backgroundTint="#59A7FF"
                    app:cornerRadius="30dp"/>
                <ProgressBar
                    android:id="@+id/progressBar"
                    android:visibility="gone"
                    android:layout_width="34dp"
                    android:layout_height="34dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:indeterminateTint="@color/white"
                    android:layout_marginEnd="16dp"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>