<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:background="@drawable/bg_rounded"
    android:backgroundTint="@color/md_theme_background"
    android:layout_marginBottom="12dp"
    >

    <com.google.android.material.imageview.ShapeableImageView

        android:id="@+id/avatar"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:shapeAppearance="@style/circleImageView"
        android:background="@color/md_theme_foreground"
        android:src="@drawable/dog"
        android:scaleType="centerCrop"
        />

    <TextView

        android:id="@+id/username"

        android:textSize="16sp"
        android:textColor="@color/text_primary"
        android:textStyle="bold"

        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toTopOf="@id/avatar"
        app:layout_constraintBottom_toTopOf="@id/sub_username"

        android:text="@string/default_username"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="12dp"/>
    <TextView
        android:id="@+id/sub_username"

        android:textColor="@color/text_secondary"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/default_sub_username"

        app:layout_constraintTop_toBottomOf="@id/username"
        app:layout_constraintBottom_toBottomOf="@id/avatar"
        app:layout_constraintStart_toStartOf="@id/username"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/date"
        app:layout_constraintTop_toTopOf="parent"

        android:textSize="12sp"

        android:text="@string/label_date_posted"
        android:layout_marginEnd="4dp"



        />

    <TextView

        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toTopOf="parent"


        android:textSize="12sp"

        android:text="@string/default_empty"

        app:layout_constraintEnd_toEndOf="parent"


        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/date"

        android:textColor="@color/main_lumen"
        android:textStyle="bold"
        android:text="@string/default_empty"

        />

    <TextView

        android:id="@+id/content"

        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="18dp"
        app:layout_constraintTop_toBottomOf="@id/avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="16sp"

        android:paddingHorizontal="10dp"

        android:textColor="@color/text_primary"
        android:text="@string/default_empty"
        />

    <ImageView
        android:id="@+id/icon_like"

        android:layout_width="20dp"
        android:layout_height="20dp"

        android:src="@drawable/ic_heart"
        app:tint="@color/text_secondary"



        app:layout_constraintTop_toBottomOf="@id/content"
        app:layout_constraintEnd_toStartOf="@id/value_like"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/ic_like"
        />
    <TextView
        android:id="@+id/value_like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintStart_toEndOf="@id/icon_like"
        app:layout_constraintTop_toTopOf="@id/icon_like"
        app:layout_constraintBottom_toBottomOf="@id/icon_like"
        android:layout_marginStart="6dp"

        android:text="@string/default_zero"
        android:textColor="@color/text_secondary"
        android:textSize="16sp"


        />

    <ImageView
        android:id="@+id/icon_comments"

        android:layout_width="20dp"
        android:layout_height="20dp"

        android:src="@drawable/ic_message"
        app:tint="@color/text_secondary"

        app:layout_constraintTop_toBottomOf="@id/content"
        app:layout_constraintStart_toEndOf="@id/value_like"
        android:layout_marginStart="18dp"
        android:contentDescription="@string/ic_comments"
        android:layout_marginTop="12dp"
        />
    <TextView
        android:id="@+id/value_comments"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintStart_toEndOf="@id/icon_comments"
        app:layout_constraintTop_toTopOf="@id/icon_comments"
        app:layout_constraintBottom_toBottomOf="@id/icon_comments"

        app:layout_constraintEnd_toEndOf="parent"

        android:layout_marginStart="6dp"

        android:text="@string/default_zero"
        android:textColor="@color/text_secondary"
        android:textSize="16sp"

        />

</androidx.constraintlayout.widget.ConstraintLayout>