<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_bottom_sheet"
    android:backgroundTint="@color/md_theme_background"
    android:padding="20dp"
    android:layout_marginTop="26dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/title_constraint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ic_luminha"
            android:contentDescription="@string/title"

            android:src="@drawable/ic_luminha"

            android:layout_width="32dp"
            android:layout_height="32dp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/session_high" />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            app:layout_constraintStart_toEndOf="@id/ic_luminha"

            app:layout_constraintTop_toTopOf="@id/ic_luminha"
            app:layout_constraintBottom_toBottomOf="@id/ic_luminha"
            android:id="@+id/textViewTitle"

            android:textColor="@color/session_high"
            android:text="@string/title_luminha"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginStart="12dp"
            />

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:id="@+id/ic_close"
            android:contentDescription="@string/close"

            android:src="@drawable/ic_close"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>



    <View
        app:layout_constraintTop_toBottomOf="@id/title_constraint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="?actionBarDivider"
        android:id="@+id/chat"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewBottomSheet"
        android:layout_width="0dp"
        android:minWidth="320dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chat"
        app:layout_constraintBottom_toTopOf="@id/layoutInput"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@android:layout/simple_list_item_1" />

    <LinearLayout

        android:id="@+id/layoutInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <EditText
            android:id="@+id/editTextMessage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/digit_a_message"
            android:inputType="text"
            android:autofillHints=""/>

        <ImageButton
            android:contentDescription="@string/send"
            android:id="@+id/buttonSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_send" />
    </LinearLayout
>

</androidx.constraintlayout.widget.ConstraintLayout>